fix(payments-section): fixed new category form, adding items, deleting items and added scroll functionality when list overflows over the list component

--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -79,3 +79,20 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  width: 13px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: hsl(var(--background));
+  border: 1px solid hsl(var(--border));
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+border: 2px solid transparent;
+ background-clip: content-box;
+  background-color: hsl(var(--primary));
+}
